test/CheckError/Class/DuplicateMemberVar.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

// CHECK: .loci:6:28: error: variable 'value' duplicates existing variable
// CHECK: .loci:6:17: note: because: variable previously defined here
class TestClass(int value, int value) {
	static create = default;
}

// CHECK: 1 error generated.
